# cpp_math

./: .gitignore
fractions/: CMakeLists.txt  Makefile
fractions/inc/: fractions.hpp
fractions/src/: fractions.cpp  main.cpp
fractions/tests/: test_fraction.cpp
fractions/tests/inc/: test_fraction.hpp
fractions/tests/test_fraction/: __main__.py  print_message.py  test_fractions.py  test_functions.py  test_utils.py
fractions/tests/test_fraction/cpp/inc/: test_fraction.hpp
fractions/tests/test_fraction/cpp/src/: main.cpp  test_functions.cpp
fractions/tests/test_fraction/python/test_fraction/: __init__.py  test_functions.py
primes/: Makefile
primes/inc/: prime.hpp
primes/src/: cgd.cpp  getnextprime.cpp  isprime.cpp  main.cpp  trialdivision.cpp
